# rust-glossy

./: Cargo.toml  README.md
glossy/: Cargo.toml
glossy/src/: lib.rs
glossy_codegen/: Cargo.toml
glossy_codegen/src/: lib.rs
glossy_codegen/src/optimize/: mod.rs  optimizer.rs
glossy_codegen/tests/: build.rs  include2.glsl  recurse.glsl  version.glsl
src/: lib.rs
tests/: badinclude1.glsl  badinclude2.glsl  build.rs  common.glsl  include1.glsl
