[package]
name = "glossy"
version = "0.1.0"
authors = ["Mathew Velasquez <mathewvq@gmail.com>"]

[features]
default = ["optimizer"]
optimizer = ["glsl-optimizer-sys", "libc"]

[dependencies]
glob = "0.2"
regex = "0.1"
lazy_static = "0.2"
glsl-optimizer-sys = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }
