[package]
name = "glossy"
version = "0.2.0"
authors = ["Mathew Velasquez <mathewvq@gmail.com>"]
description = "A compile-time GLSL shader loader with `#include` support."
repository = "https://github.com/mathewv/rust-glossy"
readme = "README.md"
keywords = ["build-dependencies", "glsl", "opengl", "opengles", "gles", "optimizer"]
license = "MPL-2.0"
