[package]
name = "glossy_codegen"
version = "0.2.0"
authors = ["Mathew Velasquez <mathewvq@gmail.com>"]
description = "Build dependency for glossy, a compile-time GLSL shader loader with `#include` support."
repository = "https://github.com/mathewv/rust-glossy"
readme = "README.md"
keywords = ["build-dependencies", "glsl", "opengl", "opengles", "gles", "optimizer"]
license = "MPL-2.0"

[features]
default = ["optimizer"]
optimizer = ["glsl-optimizer-sys", "libc"]

[dependencies]
glob = "0.2"
regex = "0.1"
lazy_static = "0.2"
glsl-optimizer-sys = { version = "0.1", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies.glossy]
path = "../glossy"
